# roton

./: .env  Cargo.toml  LICENSE  README.md  build.rs
src/: audio.rs  config.rs  main.rs  recorder.rs
src/ui/: main.slint
src/ui/editor/: editor.slint
src/ui/recorder/: finished.slint  recording.slint  screen.slint  settings.slint
ui/: main.slint  settings.slint
