[package]
name = "roton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-info = "0.5.7"
dotenv = "0.15.0"
slint = "1.14.1"
rfd = { version = "0.15", features = ["xdg-portal"] }
chrono = "0.4"
directories = "5.0"

[build-dependencies]
slint-build = "1.14.1"
